change div for main

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="advice-container">
         <p class="id-advice">ADVICE #0</p>
         <q class="text-advice"> Click the dice to generate one advice </q>
@@ -30,7 +30,7 @@
           <img src="./images/icon-dice.svg" alt="dice" />
         </button>
       </div>
-    </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
