--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
           <img src="./images/pattern-divider-mobile.svg" alt="" />
         </picture>
-        <button class="btn" role="button">
+        <button class="btn" aria-label="generate advice">
           <img src="./images/icon-dice.svg" alt="dice" />
         </button>
       </div>
